maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:27: error: reassignment to val
			compteur = compteur +1
                                 ^JediEscaper:28: error: not found: value getIndications
			if (getIndications==9999){parcours(i,j-1,compteur)}
                            ^JediEscaper:32: error: reassignment to val
				compteur = compteur +1
                                         ^JediEscaper:33: error: not found: value getIndications
				if (getIndications==9999){parcours(i-1,j,compteur)}
                                    ^JediEscaper:37: error: reassignment to val
					compteur = compteur +1
                                                 ^JediEscaper:38: error: not found: value getIndications
					if (getIndications==9999){parcours(i+1,j,compteur)}
                                            ^JediEscaper:41: error: not found: value setIndications
						setIndications(i,j+1,setIndications(i,j)+1)
                                                ^JediEscaper:42: error: reassignment to val
						compteur = compteur +1
                                                         ^JediEscaper:43: error: not found: value getIndications
						if (getIndications==9999){parcours(i,j+1,compteur)}
                                                    ^