maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
	
	var posX = 0
	var posY = 0
	var compteur = 0
	
	def biscuit() {
		for (i<- 0 to getMondeLargeur -1) {
			for (j<- 0 to getMondeHauteur -1) {
				if (aBiscuit(i,j)) {
					setIndication(i,j,compteur)
					compteur = compteur +1
					posX = i
					posY = j
				}
			}
		}
	}

	biscuit()


	def parcours(i:Int,j:Int,compteur:Int) {
		if (!aMurNord(i,j)) {
			setIndication(i,j-1,compteur+1)
			compteur = compteur +1
			if (getIndications==9999){parcours(i,j-1,compteur)}
		} else { 
			if (!aMurOuest(i,j)) {
				setIndication(i-1,j,compteur+1)
				compteur = compteur +1
				if (getIndications==9999){parcours(i-1,j,compteur)}
			} else {
				if ((getX!=getMondeLargeur)&&(!aMurOuest(i+1,j))) {
					setIndication(i+1,j,compteur+1)
					compteur = compteur +1
					if (getIndications==9999){parcours(i+1,j,compteur)}
				} else {
					if ((getY!=getMondeHauteur)&&(!aMurNord(i,j+1))) {
						setIndications(i,j+1,setIndications(i,j)+1)
						compteur = compteur +1
						if (getIndications==9999){parcours(i,j+1,compteur)}
					}
				}
			}
		}
	}

	parcours(posX,posY,compteur)
    
}
